--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "ionicons": "^7.0.0",
     "tailwindcss": "^4.1.7",
     "vue": "^3.3.0",
